<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:padding="16dp"
    android:id="@+id/login"
    android:background="@color/white">






        <ImageView
            android:id="@+id/log"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src= "@drawable/logo"
            android:layout_marginTop="65dp"

            ></ImageView>

    <TextView
        android:id="@+id/textLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/log"
        android:text="Login"
        android:textSize="40sp"
        android:textColor="@color/black"
        android:fontFamily="@font/robotobold"/>

    <TextView
        android:id="@+id/textemail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/textLogin"
        android:text="Email"
        android:layout_marginTop="15dp"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:fontFamily="@font/robreg"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="10dp"

        android:padding="5dp"
        android:hint="Enter Email"
        android:id="@+id/boxemail"
        android:layout_below="@+id/textemail"
        android:background="@drawable/square2"
       >
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#00000000"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:id="@+id/email"
            android:minHeight="48dp"></EditText>


    </com.google.android.material.textfield.TextInputLayout>




    <TextView
        android:id="@+id/textpass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/boxemail"
        android:text="Password"
        android:layout_marginTop="15dp"

        android:textSize="20sp"
        android:textColor="@color/black"
        android:fontFamily="@font/robreg"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="10dp"
        android:hint="Enter Password"

        android:padding="5dp"
        android:id="@+id/boxpass"
        android:layout_below="@+id/textpass"
        android:background="@drawable/square2"

        >
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#00000000"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:id="@+id/pass"
            android:minHeight="48dp"></EditText>
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/textforgot"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/boxpass"
        android:layout_marginLeft="143dp"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/robreg"
        android:text="Forgot your password?"
        android:textColor="#F89820"
        android:textSize="20sp" />


    <Button
        android:id="@+id/btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textforgot"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="9dp"
        android:layout_marginTop="9dp"
        android:layout_marginEnd="9dp"
        android:layout_marginBottom="9dp"
        android:background="@drawable/square2"
        android:backgroundTint="#F89820"
        android:elevation="25dp"
        android:fontFamily="@font/robreg"
        android:text="Login"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="20sp"></Button>

    <TextView
        android:id="@+id/textsign"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="64dp"

        android:fontFamily="@font/robreg"
        android:text="Sign Up"
        android:textAlignment="center"
        android:textColor="#606060"
        android:textSize="20sp" />

</RelativeLayout>


