...
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".signup"
    android:id="@+id/signup"
    android:padding="15dp"
    >

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
...
